--- a/Tetris/Tetris/nietris.csproj
+++ b/Tetris/Tetris/nietris.csproj
@@ -120,11 +120,9 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="BagRandomizer.cs" />
-    <Compile Include="Game.xaml.cs">
-      <DependentUpon>Game.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="GameLoop.xaml.cs">
-      <DependentUpon>GameLoop.xaml</DependentUpon>
+    <Compile Include="Game1.cs" />
+    <Compile Include="GamePage.xaml.cs">
+      <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="StatsPage.xaml.cs">
       <DependentUpon>StatsPage.xaml</DependentUpon>
@@ -154,50 +152,51 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <None Include="Content\Content.mgcb" />
     <None Include="Tetris_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\FlipCovers\Marathon.png" />
     <Content Include="Assets\FlipCovers\Sprint.png" />
-    <Content Include="Assets\Themes\Default\BCG.jpg" />
-    <Content Include="Assets\Themes\Default\I.png" />
-    <Content Include="Assets\Themes\Default\J.png" />
-    <Content Include="Assets\Themes\Default\L.png" />
-    <Content Include="Assets\Themes\Default\O.png" />
-    <Content Include="Assets\Themes\Default\Overlay.png" />
-    <Content Include="Assets\Themes\Default\S.png" />
-    <Content Include="Assets\Themes\Default\T.png" />
-    <Content Include="Assets\Themes\Default\Z.png" />
-    <Content Include="Assets\Themes\Dark\BCG.jpg" />
-    <Content Include="Assets\Themes\Dark\Overlay.png" />
-    <Content Include="Assets\Themes\Default1\BCG.jpg" />
-    <Content Include="Assets\Themes\Default1\I.png" />
-    <Content Include="Assets\Themes\Default1\J.png" />
-    <Content Include="Assets\Themes\Default1\L.png" />
-    <Content Include="Assets\Themes\Default1\O.png" />
-    <Content Include="Assets\Themes\Default1\Overlay.png" />
-    <Content Include="Assets\Themes\Default1\S.png" />
-    <Content Include="Assets\Themes\Default1\T.png" />
-    <Content Include="Assets\Themes\Default1\Z.png" />
-    <Content Include="Assets\Themes\Eggplant\BCG.jpg" />
-    <Content Include="Assets\Themes\Eggplant\I.png" />
-    <Content Include="Assets\Themes\Eggplant\J.png" />
-    <Content Include="Assets\Themes\Eggplant\L.png" />
-    <Content Include="Assets\Themes\Eggplant\O.png" />
-    <Content Include="Assets\Themes\Eggplant\Overlay.png" />
-    <Content Include="Assets\Themes\Eggplant\S.png" />
-    <Content Include="Assets\Themes\Eggplant\T.png" />
-    <Content Include="Assets\Themes\Eggplant\Z.png" />
-    <Content Include="Assets\Themes\Neon\BCG.jpg" />
-    <Content Include="Assets\Themes\Neon\I.png" />
-    <Content Include="Assets\Themes\Neon\J.png" />
-    <Content Include="Assets\Themes\Neon\L.png" />
-    <Content Include="Assets\Themes\Neon\O.png" />
-    <Content Include="Assets\Themes\Neon\Overlay.png" />
-    <Content Include="Assets\Themes\Neon\S.png" />
-    <Content Include="Assets\Themes\Neon\T.png" />
-    <Content Include="Assets\Themes\Neon\Z.png" />
-    <Content Include="Assets\Themes\Test\BCG.jpg" />
+    <Content Include="Content\Themes\Dark\BCG.jpg" />
+    <Content Include="Content\Themes\Dark\Overlay.png" />
+    <Content Include="Content\Themes\Default1\BCG.jpg" />
+    <Content Include="Content\Themes\Default1\I.png" />
+    <Content Include="Content\Themes\Default1\J.png" />
+    <Content Include="Content\Themes\Default1\L.png" />
+    <Content Include="Content\Themes\Default1\O.png" />
+    <Content Include="Content\Themes\Default1\Overlay.png" />
+    <Content Include="Content\Themes\Default1\S.png" />
+    <Content Include="Content\Themes\Default1\T.png" />
+    <Content Include="Content\Themes\Default1\Z.png" />
+    <Content Include="Content\Themes\Default\BCG.jpg" />
+    <Content Include="Content\Themes\Default\I.png" />
+    <Content Include="Content\Themes\Default\J.png" />
+    <Content Include="Content\Themes\Default\L.png" />
+    <Content Include="Content\Themes\Default\O.png" />
+    <Content Include="Content\Themes\Default\Overlay.png" />
+    <Content Include="Content\Themes\Default\S.png" />
+    <Content Include="Content\Themes\Default\T.png" />
+    <Content Include="Content\Themes\Default\Z.png" />
+    <Content Include="Content\Themes\Eggplant\BCG.jpg" />
+    <Content Include="Content\Themes\Eggplant\I.png" />
+    <Content Include="Content\Themes\Eggplant\J.png" />
+    <Content Include="Content\Themes\Eggplant\L.png" />
+    <Content Include="Content\Themes\Eggplant\O.png" />
+    <Content Include="Content\Themes\Eggplant\Overlay.png" />
+    <Content Include="Content\Themes\Eggplant\S.png" />
+    <Content Include="Content\Themes\Eggplant\T.png" />
+    <Content Include="Content\Themes\Eggplant\Z.png" />
+    <Content Include="Content\Themes\Neon\BCG.jpg" />
+    <Content Include="Content\Themes\Neon\I.png" />
+    <Content Include="Content\Themes\Neon\J.png" />
+    <Content Include="Content\Themes\Neon\L.png" />
+    <Content Include="Content\Themes\Neon\O.png" />
+    <Content Include="Content\Themes\Neon\Overlay.png" />
+    <Content Include="Content\Themes\Neon\S.png" />
+    <Content Include="Content\Themes\Neon\T.png" />
+    <Content Include="Content\Themes\Neon\Z.png" />
+    <Content Include="Content\Themes\Test\BCG.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -212,11 +211,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Game.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="GameLoop.xaml">
+    <Page Include="GamePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -243,9 +238,6 @@
     </PackageReference>
     <PackageReference Include="MonoGame.Framework.WindowsUniversal">
       <Version>3.7.1.189</Version>
-    </PackageReference>
-    <PackageReference Include="Win2D.uwp">
-      <Version>1.23.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
