--- a/nieTRIS future/nieTRIS future.csproj
+++ b/nieTRIS future/nieTRIS future.csproj
@@ -143,6 +143,7 @@
     <Content Include="Assets\AppImages\SplashScreen.scale-100.png" />
     <Content Include="Assets\AppImages\SplashScreen.scale-200.png" />
     <Content Include="Assets\AppImages\SplashScreen.scale-400.png" />
+    <Content Include="Assets\background3.png" />
     <Content Include="Assets\button_on.png" />
     <Content Include="Assets\button_semi.png" />
     <Content Include="Assets\Fonts\neuropolitical rg.ttf" />
