--- a/nieTRIS future/nieTRIS future.csproj
+++ b/nieTRIS future/nieTRIS future.csproj
@@ -154,11 +154,12 @@
     <Content Include="Assets\background3.png" />
     <Content Include="Assets\button_on.png" />
     <Content Include="Assets\button_semi.png" />
+    <Content Include="Assets\FlipCovers\Endless.png" />
+    <Content Include="Assets\FlipCovers\Marathon.png" />
     <Content Include="Assets\Fonts\neuropolitical rg.ttf" />
     <None Include="nieTRIS future_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\FlipCovers\Marathon.png" />
     <Content Include="Assets\FlipCovers\sprint.png" />
     <Content Include="Assets\LargeTile.scale-100.png" />
     <Content Include="Assets\LargeTile.scale-125.png" />
