Dodano stronę wygranej, obsługa trybów gry, poprawiono credits, dodano audio

--- a/nieTRIS future/nieTRIS future.csproj
+++ b/nieTRIS future/nieTRIS future.csproj
@@ -114,6 +114,10 @@
     <Compile Include="CreditsPage.xaml.cs">
       <DependentUpon>CreditsPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Gamemode\EndlessGM.cs" />
+    <Compile Include="Gamemode\Gamemode.cs" />
+    <Compile Include="Gamemode\MarathonGM.cs" />
+    <Compile Include="Gamemode\SprintGM.cs" />
     <Compile Include="GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
